[project]
name = "TurboScraper"
version = "1.0.0"
description = "An asynchronous web scraper API built with FastAPI and Playwright."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.115.12",
    "playwright>=1.51.0",
    "robotsparser>=0.0.12",
    "validators>=0.34.0",
]
